[gd_scene load_steps=60 format=2]

[ext_resource path="res://components/TopTitleBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/App.gd" type="Script" id=2]
[ext_resource path="res://components/MyGuilds.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/custom_theme.tres" type="Theme" id=4]
[ext_resource path="res://components/Resize.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/hash.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/chevron_down.svg" type="Texture" id=7]
[ext_resource path="res://assets/fonts/whitney_b_20.tres" type="DynamicFont" id=8]
[ext_resource path="res://components/ChannelBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/Tooltip.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/ToolTips.gd" type="Script" id=11]
[ext_resource path="res://components/ChannelsList.tscn" type="PackedScene" id=12]
[ext_resource path="res://components/MessagesList.tscn" type="PackedScene" id=13]
[ext_resource path="res://components/UsersList.tscn" type="PackedScene" id=14]
[ext_resource path="res://components/GuildHoverIndicator.gd" type="Script" id=15]
[ext_resource path="res://scripts/MessageFormTextEdit.gd" type="Script" id=16]
[ext_resource path="res://assets/StyleBoxEmpty.tres" type="StyleBox" id=17]
[ext_resource path="res://assets/fonts/whitney_r_12.tres" type="DynamicFont" id=18]
[ext_resource path="res://components/TextInput.gd" type="Script" id=19]
[ext_resource path="res://assets/icons/attach.svg" type="Texture" id=20]
[ext_resource path="res://components/IconButton.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/icons/gift.svg" type="Texture" id=22]
[ext_resource path="res://assets/icons/sticker.svg" type="Texture" id=23]
[ext_resource path="res://assets/icons/gif.svg" type="Texture" id=24]
[ext_resource path="res://assets/icons/party_emoji.svg" type="Texture" id=25]
[ext_resource path="res://materials/EmojiButtonMaterial.tres" type="Material" id=26]
[ext_resource path="res://scripts/EmojiButton.gd" type="Script" id=27]
[ext_resource path="res://components/UserArea.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/icons/multiply.svg" type="Texture" id=29]
[ext_resource path="res://components/ChannelBarButton.tscn" type="PackedScene" id=30]
[ext_resource path="res://assets/icons/github.svg" type="Texture" id=31]
[ext_resource path="res://assets/icons/youtube.svg" type="Texture" id=32]
[ext_resource path="res://scenes/HelpPanel.gd" type="Script" id=33]
[ext_resource path="res://assets/fonts/whitney_r_14.tres" type="DynamicFont" id=34]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.133333, 0.145098, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.137255, 0.145098, 0.160784, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.192157, 0.211765, 1 )
corner_radius_top_left = 12
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.0196078 )
corner_radius_top_left = 12
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.211765, 0.223529, 0.247059, 1 )

[sub_resource type="StyleBoxLine" id=9]
color = Color( 1, 1, 1, 0.0392157 )
grow_begin = -12.0
grow_end = -12.0
vertical = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.211765, 0.223529, 0.247059, 1 )
border_width_top = 2
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.137255, 0.145098, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.25098, 0.266667, 0.294118, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.501961 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_detail = 20
anti_aliasing = false

[sub_resource type="Animation" id=19]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.211765, 0.223529, 0.247059, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 1, 1, 0.0588235 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=25]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.184314, 0.192157, 0.211765, 1 )

[node name="App" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 1174.0
margin_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="TopTitleBar" parent="VB" instance=ExtResource( 1 )]
margin_right = 1174.0

[node name="MC" type="MarginContainer" parent="VB"]
margin_top = 28.0
margin_right = 1174.0
margin_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="VB/MC"]
margin_right = 1174.0
margin_bottom = 598.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="HB" type="HBoxContainer" parent="VB/MC/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyGuildsSC" parent="VB/MC/BG/HB" instance=ExtResource( 3 )]

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB"]
margin_left = 90.0
margin_right = 1174.0
margin_bottom = 598.0
size_flags_horizontal = 3

[node name="VB" type="VBoxContainer" parent="VB/MC/BG/HB/HB"]
margin_right = 300.0
margin_bottom = 598.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="Top" type="PanelContainer" parent="VB/MC/BG/HB/HB/VB"]
margin_right = 300.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="MC" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB/Top"]
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB/Top/MC"]
margin_left = 20.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VB/MC/BG/HB/HB/VB/Top/MC/HB"]
margin_right = 123.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 8 )
text = "3ddelano Cafe"

[node name="Chevron" type="TextureRect" parent="VB/MC/BG/HB/HB/VB/Top/MC/HB"]
margin_left = 236.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 10
texture = ExtResource( 7 )

[node name="HoverBg" type="Button" parent="VB/MC/BG/HB/HB/VB/Top"]
margin_right = 300.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ChannelsList" parent="VB/MC/BG/HB/HB/VB" instance=ExtResource( 12 )]
margin_bottom = 542.0

[node name="UserArea" parent="VB/MC/BG/HB/HB/VB" instance=ExtResource( 28 )]

[node name="VB2" type="VBoxContainer" parent="VB/MC/BG/HB/HB"]
margin_left = 300.0
margin_right = 1084.0
margin_bottom = 598.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Top" type="Panel" parent="VB/MC/BG/HB/HB/VB2"]
margin_right = 784.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 61 )
custom_styles/panel = SubResource( 8 )

[node name="MC" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB2/Top/MC"]
margin_left = 8.0
margin_right = 768.0
margin_bottom = 61.0

[node name="Left" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB"]
margin_right = 360.0
margin_bottom = 61.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="MC" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB/Left"]
margin_right = 48.0
margin_bottom = 61.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hash" type="TextureRect" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB/Left/MC"]
self_modulate = Color( 0.447059, 0.462745, 0.490196, 1 )
margin_left = 8.0
margin_right = 40.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ChannelName" type="Label" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB/Left"]
margin_left = 56.0
margin_top = 18.0
margin_right = 121.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 8 )
text = "general"

[node name="VSeparator" type="VSeparator" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB/Left"]
margin_left = 129.0
margin_right = 145.0
margin_bottom = 61.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 16

[node name="ChannelName2" type="Label" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB/Left"]
margin_left = 153.0
margin_top = 20.0
margin_right = 354.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.72549, 0.733333, 0.745098, 1 )
text = "The main chatting hub. Chat..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChannelBar" parent="VB/MC/BG/HB/HB/VB2/Top/MC/HB" instance=ExtResource( 9 )]
margin_left = 360.0
margin_right = 760.0
margin_bottom = 61.0

[node name="PC" type="PanelContainer" parent="VB/MC/BG/HB/HB/VB2"]
margin_top = 61.0
margin_right = 784.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB2/PC"]
margin_top = 2.0
margin_right = 783.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB"]
margin_right = 483.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MessagesList" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB" instance=ExtResource( 13 )]
margin_bottom = 461.0

[node name="MessageForm" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB"]
margin_top = 461.0
margin_right = 483.0
margin_bottom = 534.0
size_flags_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 1
custom_constants/margin_left = 20
custom_constants/margin_bottom = 32

[node name="TextInput" type="PanelContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm"]
margin_left = 20.0
margin_top = 1.0
margin_right = 463.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 11 )
script = ExtResource( 19 )

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput"]
margin_right = 443.0
margin_bottom = 40.0

[node name="MC" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB"]
margin_right = 48.0
margin_bottom = 36.0
size_flags_vertical = 0
custom_constants/margin_right = 8
custom_constants/margin_top = 12
custom_constants/margin_left = 8

[node name="IconButton" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC" instance=ExtResource( 21 )]
margin_left = 8.0
margin_top = 12.0
margin_right = 40.0
margin_bottom = 36.0
icon_texture = ExtResource( 20 )
bg_color_hover = Color( 0, 0, 0, 0 )

[node name="MC2" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB"]
margin_left = 48.0
margin_right = 284.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/margin_right = 14
custom_constants/margin_top = 8
custom_constants/margin_left = 14
custom_constants/margin_bottom = 8

[node name="PlaceholderText" type="Label" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC2"]
margin_left = 14.0
margin_top = 10.0
margin_right = 139.0
margin_bottom = 30.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.447059, 0.462745, 0.482353, 1 )
text = "Message #general"

[node name="ExpandableTextEdit" type="TextEdit" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC2"]
margin_left = 14.0
margin_top = 8.0
margin_right = 222.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 24 )
custom_styles/read_only = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_styles/completion = ExtResource( 17 )
custom_colors/selection_color = Color( 0.0392157, 0.403922, 0.847059, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.35
script = ExtResource( 16 )

[node name="MC3" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB"]
margin_left = 284.0
margin_right = 443.0
margin_bottom = 40.0
custom_constants/margin_right = 2
custom_constants/margin_top = 9

[node name="HB" type="HBoxContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3"]
margin_top = 9.0
margin_right = 157.0
margin_bottom = 38.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="GiftButton" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB" instance=ExtResource( 21 )]
margin_bottom = 29.0
icon_texture = ExtResource( 22 )
bg_color_hover = Color( 0, 0, 0, 0 )

[node name="GifButton" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB" instance=ExtResource( 21 )]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 29.0
icon_texture = ExtResource( 24 )
bg_color_hover = Color( 0, 0, 0, 0 )

[node name="StickerButton" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB" instance=ExtResource( 21 )]
margin_left = 80.0
margin_right = 112.0
margin_bottom = 29.0
icon_texture = ExtResource( 23 )
bg_color_hover = Color( 0, 0, 0, 0 )

[node name="EmojiButton" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB"]
margin_left = 120.0
margin_right = 157.0
margin_bottom = 29.0
rect_min_size = Vector2( 24, 24 )
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_texture = ExtResource( 25 )

[node name="Button" type="Button" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB/EmojiButton"]
margin_right = 37.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="MC" type="MarginContainer" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB/EmojiButton"]
margin_right = 37.0
margin_bottom = 29.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="Icon" type="TextureRect" parent="VB/MC/BG/HB/HB/VB2/PC/HB/VB/MessageForm/TextInput/HB/MC3/HB/EmojiButton/MC"]
material = ExtResource( 26 )
margin_left = 4.0
margin_right = 33.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 25 )
expand = true
stretch_mode = 6

[node name="MembersList" parent="VB/MC/BG/HB/HB/VB2/PC/HB" instance=ExtResource( 14 )]

[node name="HorizontalResize" type="HBoxContainer" parent="VB/MC"]
margin_right = 1174.0
margin_bottom = 598.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftResize" type="Control" parent="VB/MC/HorizontalResize"]
margin_right = 6.0
margin_bottom = 598.0
rect_min_size = Vector2( 6, 6 )
mouse_default_cursor_shape = 10
size_flags_vertical = 3
script = ExtResource( 5 )
left = true

[node name="RightResize" type="Control" parent="VB/MC/HorizontalResize"]
margin_left = 1168.0
margin_right = 1174.0
margin_bottom = 598.0
rect_min_size = Vector2( 6, 6 )
mouse_default_cursor_shape = 10
size_flags_horizontal = 10
size_flags_vertical = 3
script = ExtResource( 5 )
right = true

[node name="BottomResize" type="HBoxContainer" parent="VB/MC"]
margin_top = 592.0
margin_right = 1174.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 10
__meta__ = {
"_edit_lock_": true
}

[node name="BottomLeftResize" type="Control" parent="VB/MC/BottomResize"]
margin_right = 6.0
margin_bottom = 6.0
rect_min_size = Vector2( 6, 6 )
mouse_default_cursor_shape = 11
script = ExtResource( 5 )
left = true
bottom = true

[node name="BottomResize" type="Control" parent="VB/MC/BottomResize"]
margin_left = 6.0
margin_right = 1168.0
margin_bottom = 6.0
rect_min_size = Vector2( 6, 6 )
mouse_default_cursor_shape = 9
size_flags_horizontal = 3
script = ExtResource( 5 )
bottom = true

[node name="BottomRightResize" type="Control" parent="VB/MC/BottomResize"]
margin_left = 1168.0
margin_right = 1174.0
margin_bottom = 6.0
rect_min_size = Vector2( 6, 6 )
mouse_default_cursor_shape = 12
script = ExtResource( 5 )
right = true
bottom = true

[node name="Overlays" type="ReferenceRect" parent="VB/MC"]
margin_right = 1174.0
margin_bottom = 598.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PC" type="PanelContainer" parent="VB/MC/Overlays"]
margin_left = 240.0
margin_top = 22.0
margin_right = 294.0
margin_bottom = 45.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="VB/MC/Overlays/PC"]
margin_right = 54.0
margin_bottom = 23.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="Debug" type="Label" parent="VB/MC/Overlays/PC/MC"]
margin_left = 8.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 18 )
text = "FPS: 60"

[node name="GuildHoverIndicator" type="Panel" parent="VB/MC/Overlays"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 9.384
margin_right = 4.0
margin_bottom = 33.384
rect_min_size = Vector2( 4, 24 )
rect_pivot_offset = Vector2( 0, 12 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 18 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VB/MC/Overlays/GuildHoverIndicator"]
anims/hide = SubResource( 19 )
anims/show = SubResource( 20 )

[node name="HelpPanel" type="PanelContainer" parent="VB/MC/Overlays"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 21 )
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}
_panel_path = NodePath("CC/Panel")
_close_button_path = NodePath("CC/Panel/MC/VB/HB/CloseButton/Button")
_github_button_path = NodePath("CC/Panel/MC/VB/HB2/HB/GithubButton")
_youtube_button_path = NodePath("CC/Panel/MC/VB/HB2/HB/YoutubeButton")

[node name="Button" type="Button" parent="VB/MC/Overlays/HelpPanel"]
margin_right = 1174.0
margin_bottom = 598.0
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )

[node name="CC" type="CenterContainer" parent="VB/MC/Overlays/HelpPanel"]
margin_right = 1174.0
margin_bottom = 598.0
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="VB/MC/Overlays/HelpPanel/CC"]
margin_left = 427.0
margin_top = 198.0
margin_right = 747.0
margin_bottom = 400.0
rect_min_size = Vector2( 320, 150 )
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel"]
margin_right = 320.0
margin_bottom = 202.0
custom_constants/margin_right = 16
custom_constants/margin_top = 12
custom_constants/margin_left = 18
custom_constants/margin_bottom = 18

[node name="VB" type="VBoxContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC"]
margin_left = 18.0
margin_top = 12.0
margin_right = 304.0
margin_bottom = 184.0
custom_constants/separation = 16

[node name="HB" type="HBoxContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB"]
margin_right = 286.0
margin_bottom = 36.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 8 )
text = "Help"

[node name="HSeparator" type="HSeparator" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB"]
margin_left = 40.0
margin_right = 250.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="CloseButton" type="PanelContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB"]
margin_left = 250.0
margin_right = 286.0
margin_bottom = 36.0
custom_styles/panel = SubResource( 23 )

[node name="Button" type="Button" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB/CloseButton"]
margin_right = 36.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
custom_fonts/font = ExtResource( 18 )
shortcut_in_tooltip = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB/CloseButton"]
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="CloseIcon" type="TextureRect" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB/CloseButton/MC"]
self_modulate = Color( 0.8, 0.8, 0.8, 1 )
margin_left = 6.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="VB" type="VBoxContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB"]
margin_top = 52.0
margin_right = 286.0
margin_bottom = 124.0
custom_constants/separation = 12

[node name="Label2" type="Label" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/VB"]
margin_right = 286.0
margin_bottom = 43.0
text = "A clone of Discord's UI made in the Godot Game Engine."
autowrap = true

[node name="Label3" type="Label" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/VB"]
margin_top = 55.0
margin_right = 286.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 34 )
text = "This project is not affiliated with Discord Inc."
autowrap = true

[node name="HB2" type="HBoxContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB"]
margin_top = 140.0
margin_right = 286.0
margin_bottom = 172.0
mouse_filter = 2

[node name="Label" type="Label" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB2"]
margin_top = 6.0
margin_right = 83.0
margin_bottom = 26.0
text = "By 3ddelano"

[node name="HB" type="HBoxContainer" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB2"]
margin_left = 216.0
margin_right = 286.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/separation = 6

[node name="GithubButton" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB2/HB" instance=ExtResource( 30 )]
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 10
_icon_texture = ExtResource( 31 )

[node name="YoutubeButton" parent="VB/MC/Overlays/HelpPanel/CC/Panel/MC/VB/HB2/HB" instance=ExtResource( 30 )]
margin_left = 38.0
margin_right = 70.0
margin_bottom = 32.0
size_flags_horizontal = 10
_icon_texture = ExtResource( 32 )

[node name="Tween" type="Tween" parent="VB/MC/Overlays/HelpPanel"]

[node name="Border" type="Panel" parent="."]
margin_right = 1174.0
margin_bottom = 626.0
mouse_filter = 2
custom_styles/panel = SubResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="ToolTips" type="ReferenceRect" parent="."]
margin_right = 1174.0
margin_bottom = 626.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}
_tooltip_scene = ExtResource( 10 )
